<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView 
        android:id="@+id/first"
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:autoLink="web"
        android:text="@string/first"/>
    <TextView 
        android:id="@+id/second"
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:autoLink="web"
        android:clickable="true"
        android:text="@string/second"/>
    <TextView 
        android:id="@+id/third"
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:clickable="true"
        android:autoLink="web"
        android:text="@string/third"/>

</LinearLayout>
